# playlist-transfer

./: .gitignore  LICENSE  pyproject.toml
playlist_transfer/: auth.py  main.py
